--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,21 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.23.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.9.3</version>
+            <scope>test</scope>
+        </dependency>
+
+
+
         <!-- RocketMQ Starter (排除默认客户端) -->
         <dependency>
             <groupId>org.apache.rocketmq</groupId>
